# briapi-client-python

./: .gitignore  pyproject.toml
briapi_client_python/: auth.py  briva.py  config.py  error.py  http.py
tests/: test_briapi_client_python.py  test_briva.py
